# Embedded-Lab02

./: .gitignore  CMakeLists.txt  README.md
include/: definitions.h  kbhandle.h
media/: lab02_01.webm  lab02_02.webm  lab02_03.webm
solution/: mt_player  sm_player1  sm_player2  st_player
src/: mt_player.c  sm_player1.c  sm_player2.c  st_player.c
